--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -82,16 +82,16 @@ jobs:
               - 'checker/**'
 
       - name: Run parser tests
-        if: steps.changes.outputs.parser == 'true'
+        if: steps.changes.outputs.parser == 'true' || github.base_ref == 'main'
         run: |
           cargo test
           
           curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
-          cargo run -p ezno-parser --example parse react.js --timings --render-timings
+          cargo run -p ezno-parser --example parse react.js
         working-directory: parser
 
       - name: Run checker specification
-        if: steps.changes.outputs.checker == 'true' && github.event_name != 'pull_request'
+        if: (steps.changes.outputs.checker == 'true' && github.event_name != 'pull_request') || github.base_ref == 'main'
         run: cargo test
         working-directory: checker/specification
       
@@ -103,7 +103,7 @@ jobs:
           EZNO_DEBUG: 1
 
       - name: Run checker tests
-        if: steps.changes.outputs.checker == 'true'
+        if: steps.changes.outputs.checker == 'true' || github.base_ref == 'main'
         run: |
           # Test checker with the parser features
           cargo test -F ezno-parser 
@@ -137,20 +137,20 @@ jobs:
               - 'checker/**'
 
       - uses: brndnmtthws/rust-action-cargo-binstall@v1
-        if: steps.changes.outputs.src == 'true'
+        if: steps.changes.outputs.src == 'true' || github.base_ref == 'main'
         with:
           packages: wasm-pack@0.12.1
       - uses: denoland/setup-deno@v1
-        if: steps.changes.outputs.src == 'true'
+        if: steps.changes.outputs.src == 'true' || github.base_ref == 'main'
         with:
           deno-version: v1.x
       - uses: actions/setup-node@v3
-        if: steps.changes.outputs.src == 'true'
+        if: steps.changes.outputs.src == 'true' || github.base_ref == 'main'
         with:
           node-version: 18
 
       - name: Build and test WASM
-        if: steps.changes.outputs.src == 'true'
+        if: steps.changes.outputs.src == 'true' || github.base_ref == 'main'
         # TODO want `continue-on-error: true` but doesn't report error
         run: |
           # TODO `cargo check --target wasm32-unknown-unknown --lib` might be good enough
@@ -164,9 +164,9 @@ jobs:
           deno run -A ./dist/cli.mjs info
 
           npx -p typescript tsc --strict --pretty ./build/ezno_lib.d.ts
+          cargo run -p ezno-parser --example parse ./build/ezno_lib.d.ts
           
           # TODO temp as the types generated can be a bit unpredicatible
-          echo "::debug::On branch '${{ github.ref_name }}'"
           if ${{ contains(fromJSON('["main", "ast-typegen-direct"]'), github.ref_name ) }}; then
             npm run build-release
             npx -p typescript tsc --strict --pretty ./build/ezno_lib.d.ts
